2016-03-11	Niels Grewe <niels.grewe@halbordnung.de>

	* Headers/Foundation/NSPredicate.h:
	Include NSString.h so that we the header knows about NSString
	conforming to NSCopying.

2016-03-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/GNUstepBase/NSObject+GNUstepBase.h:
	* Source/Additions/GSInsensitiveDictionary.m:
	* Source/Additions/GSMime.m:
	* Source/Additions/NSObject+GNUstepBase.m:
	* Source/GSArray.m:
	* Source/GSDictionary.m:
	* Source/GSSet.m:
	* Source/GSString.m:
	* Source/NSArray.m:
	* Source/NSBundle.m:
	* Source/NSFileManager.m:
	* Source/NSJSONSerialization.m:
	* Source/NSPointerArray.m:
	* Source/NSPredicate.m:
	* Source/NSPropertyList.m:
	* Source/NSSerializer.m:
	* Source/NSSet.m:
	* Source/NSSortDescriptor.m:
	* Source/NSString.m:
	* Source/NSTimeZone.m:
	* Source/NSUserDefaults.m:
	Deprecate -makeImmutableCopyOnFail: and replace with -makeImmutable.
	The new method has the essential functionality of the old one,
	but omits the confusing ownership semantics and is therefore less
	likely to cause errors (and more amenable to use with ARC.)

2016-03-10  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Headers/Foundation/NSLocale.h:
	* Source/NSLocale.m (+localeWithLocaleIdentifier:):
	Add trivial method introduced in OS X 10.6.

2016-03-09 Riccardo Mottola <rm@gnu.org>

	* Headers/Foundation/NSPathUtilities.h
	* Source/NSPathUtilities.m
	Add some new path values.

2016-03-09	Niels Grewe <niels.grewe@halbordnung.de>

	* Headers/Foundation/NSPredicate.h
	* Source/NSPredicate.m
	* Tests/base/NSPredicate/basic.m:
	Implementation and tests for +predicateWithBlock: and
	-evaluateWithObject:substitutionVariables:

2016-03-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSSocketPortNameServer.m:
	* Source/GSSocketStream.h:
	* Source/NSTimeZone.m:
	* Source/GSSocketStream.m:
	* Source/NSCalendarDate.m:
	* Source/NSBundle.m:
	* Source/NSPathUtilities.m:
	* Source/NSProcessInfo.m:
	* Source/NSSocketPort.m:
	* Source/GSRunLoopWatcher.m: